--- a/FrontEnd/TP/ChronoGame/app/src/main/res/values/strings.xml
+++ b/FrontEnd/TP/ChronoGame/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="time">10</string>
     <string name="start">Start !</string>
     <string name="display">display</string>
+    <string name="todo">TODO</string>
 </resources>
